test/files/neg/t6680a.check
t6680a.scala:11: error: type mismatch;
 found   : String("abc")
 required: A
    y.x = "abc"
          ^
t6680a.scala:18: error: type mismatch;
 found   : String("")
 required: A
  case class C[A](f:A=>A);def f(x:Any)=x match { case C(f)=>f("") };f(C[Int](x=>x))
                                                              ^
two errors found
